syntax = "proto3";

option csharp_namespace = "EasyAuth.Grpc";

package main;

service HyprSec {
  rpc DownloadImage (HyprSec_AuthRequest) returns (HyprSec_ImageReply) {}
}

message HyprSec_AuthRequest {
  string token = 1;
  string hwid = 2; // Добавлено поле HWID
}

message HyprSec_ImageReply {
  bool success = 1;
  bytes image = 2;
  bytes entry = 3;
}